remerged text based programming language. there's a bug with method references not updating correctly